namespace HostedService.Enums
{
    public enum BackupStatus
    {
        Pending,
        InProgress,
        Completed,
        Failed
    }
}
