// <auto-generated />
using System;
using Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace Infrastructure.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20260407234235_SecondMigration")]
    partial class SecondMigration
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "10.0.2");

            modelBuilder.Entity("HostedService.Entities.ApplicationSettings", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("ScriptExecutionTimeoutMinutes")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.ToTable("ApplicationSettings");
                });

            modelBuilder.Entity("HostedService.Entities.Destino", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("AccessKeyId")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("AzureBlobConnectionString")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("AzureBlobContainerName")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("BucketName")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("CarpetaDestino")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Credenciales")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaModificacion")
                        .HasColumnType("TEXT");

                    b.Property<string>("GooglePrivateKey")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("GoogleServiceAccountEmail")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("IdCarpeta")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("S3Region")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("SecretAccessKey")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("TipoDeDestino")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Nombre")
                        .IsUnique();

                    b.ToTable("Destinos");
                });

            modelBuilder.Entity("HostedService.Entities.HistoryBackupExecutions", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int?>("ArchivosCopiados")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("EndTime")
                        .HasColumnType("TEXT");

                    b.Property<string>("ErrorMessage")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("StartTime")
                        .HasColumnType("TEXT");

                    b.Property<int>("Status")
                        .HasColumnType("INTEGER");

                    b.Property<int>("TrabajoId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("Trigger")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.ToTable("HistoryBackupExecutions");
                });

            modelBuilder.Entity("HostedService.Entities.LogAccionesUsuario", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Accion")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaAccion")
                        .HasColumnType("TEXT");

                    b.Property<string>("TablaAfectada")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("ValorAnterior")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("ValorNuevo")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("LogAccionesUsuario");
                });

            modelBuilder.Entity("HostedService.Entities.Origen", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Descripcion")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaModificacion")
                        .HasColumnType("TEXT");

                    b.Property<string>("FiltrosExclusiones")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Ruta")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("TamanoMaximo")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Nombre")
                        .IsUnique();

                    b.ToTable("Origenes");
                });

            modelBuilder.Entity("HostedService.Entities.ScriptConfiguration", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Arguments")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("CreatedOn")
                        .HasColumnType("TEXT");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("ScriptPath")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Tipo")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("UpdatedOn")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("ScriptConfigurations");
                });

            modelBuilder.Entity("HostedService.Entities.Trabajo", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<bool>("Activo")
                        .HasColumnType("INTEGER");

                    b.Property<string>("CronExpression")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Descripcion")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("EstatusPrevio")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaModificacion")
                        .HasColumnType("TEXT");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<bool>("Procesando")
                        .HasColumnType("INTEGER");

                    b.Property<int>("TrabajosOrigenDestinoId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("TrabajosScriptsId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("TrabajosOrigenDestinoId");

                    b.HasIndex("TrabajosScriptsId");

                    b.ToTable("Trabajos");
                });

            modelBuilder.Entity("HostedService.Entities.TrabajoScripts", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaModificacion")
                        .HasColumnType("TEXT");

                    b.Property<bool>("PostDetenerEnFallo")
                        .HasColumnType("INTEGER");

                    b.Property<bool>("PreDetenerEnFallo")
                        .HasColumnType("INTEGER");

                    b.Property<int?>("ScriptPostId")
                        .HasColumnType("INTEGER");

                    b.Property<int?>("ScriptPreId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("ScriptPostId");

                    b.HasIndex("ScriptPreId");

                    b.ToTable("TrabajosScripts", (string)null);
                });

            modelBuilder.Entity("HostedService.Entities.TrabajosOrigenDestino", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("DestinoId")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("FechaModificacion")
                        .HasColumnType("TEXT");

                    b.Property<int>("OrigenId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("DestinoId");

                    b.HasIndex("OrigenId", "DestinoId")
                        .IsUnique();

                    b.ToTable("TrabajosOrigenDestinos");
                });

            modelBuilder.Entity("HostedService.Entities.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<bool>("RequirePassword")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("HostedService.Entities.Trabajo", b =>
                {
                    b.HasOne("HostedService.Entities.TrabajosOrigenDestino", "TrabajosOrigenDestino")
                        .WithMany("Trabajos")
                        .HasForeignKey("TrabajosOrigenDestinoId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("HostedService.Entities.TrabajoScripts", "TrabajosScripts")
                        .WithMany("Trabajos")
                        .HasForeignKey("TrabajosScriptsId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("TrabajosOrigenDestino");

                    b.Navigation("TrabajosScripts");
                });

            modelBuilder.Entity("HostedService.Entities.TrabajoScripts", b =>
                {
                    b.HasOne("HostedService.Entities.ScriptConfiguration", "ScriptPost")
                        .WithMany("TrabajoScriptsComoPost")
                        .HasForeignKey("ScriptPostId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.HasOne("HostedService.Entities.ScriptConfiguration", "ScriptPre")
                        .WithMany("TrabajoScriptsComoPre")
                        .HasForeignKey("ScriptPreId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("ScriptPost");

                    b.Navigation("ScriptPre");
                });

            modelBuilder.Entity("HostedService.Entities.TrabajosOrigenDestino", b =>
                {
                    b.HasOne("HostedService.Entities.Destino", "Destino")
                        .WithMany()
                        .HasForeignKey("DestinoId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("HostedService.Entities.Origen", "Origen")
                        .WithMany()
                        .HasForeignKey("OrigenId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Destino");

                    b.Navigation("Origen");
                });

            modelBuilder.Entity("HostedService.Entities.ScriptConfiguration", b =>
                {
                    b.Navigation("TrabajoScriptsComoPost");

                    b.Navigation("TrabajoScriptsComoPre");
                });

            modelBuilder.Entity("HostedService.Entities.TrabajoScripts", b =>
                {
                    b.Navigation("Trabajos");
                });

            modelBuilder.Entity("HostedService.Entities.TrabajosOrigenDestino", b =>
                {
                    b.Navigation("Trabajos");
                });
#pragma warning restore 612, 618
        }
    }
}
